bases/default/ersatztv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ersatztv
  annotations:
    k0s.reynn.net/resource-profile: small
spec:
  selector:
    matchLabels:
      app: ersatztv
  template:
    metadata:
      labels:
        app: ersatztv
    spec:
      containers:
        - name: ersatztv
          image: jasongdove/ersatztv
          resources: {}
          ports:
            - containerPort: 8409
              name: http-ui
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ersatztv-config
