bases/default/ersatztv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ersatztv
spec:
  type: ClusterIP
  selector:
    app: ersatztv
  ports:
    - name: tcp
      port: 8409
